# WIDS_2025

./: pyproject.toml
src/resume_analyzer/: crew.py  main.py
src/resume_analyzer/config/: agents.yaml  tasks.yaml
