[project]
name = "resume_analyzer"
version = "0.1.0"
description = "resume_analyzer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.7.0",
    "litellm>=1.75.3",
]

[project.scripts]
resume_analyzer = "resume_analyzer.main:run"
run_crew = "resume_analyzer.main:run"
train = "resume_analyzer.main:train"
replay = "resume_analyzer.main:replay"
test = "resume_analyzer.main:test"
run_with_trigger = "resume_analyzer.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
